--- a/Week1/Exploration_04.ipynb
+++ b/Week1/Exploration_04.ipynb
@@ -174,20 +174,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
        "\n",
-       "<div id=\"altair-viz-879f2186baae4d37bbb689df8727ce30\"></div>\n",
+       "<div id=\"altair-viz-751e8feafbaf4ff0b9a685219567a096\"></div>\n",
        "<script type=\"text/javascript\">\n",
        "  var VEGA_DEBUG = (typeof VEGA_DEBUG == \"undefined\") ? {} : VEGA_DEBUG;\n",
        "  (function(spec, embedOpt){\n",
        "    let outputDiv = document.currentScript.previousElementSibling;\n",
-       "    if (outputDiv.id !== \"altair-viz-879f2186baae4d37bbb689df8727ce30\") {\n",
-       "      outputDiv = document.getElementById(\"altair-viz-879f2186baae4d37bbb689df8727ce30\");\n",
+       "    if (outputDiv.id !== \"altair-viz-751e8feafbaf4ff0b9a685219567a096\") {\n",
+       "      outputDiv = document.getElementById(\"altair-viz-751e8feafbaf4ff0b9a685219567a096\");\n",
        "    }\n",
        "    const paths = {\n",
        "      \"vega\": \"https://cdn.jsdelivr.net/npm//vega@5?noext\",\n",
@@ -240,17 +240,17 @@
        "alt.Chart(...)"
       ]
      },
-     "execution_count": 7,
      "metadata": {},
-     "output_type": "execute_result"
+     "output_type": "display_data"
     }
    ],
    "source": [
-    "alt.Chart(df).mark_circle().encode(\n",
+    "chart =alt.Chart(df).mark_circle().encode(\n",
     "    x='petal_length',\n",
     "    y='petal_width',\n",
     "    color=alt.Color('species', scale=alt.Scale(scheme='set1'))\n",
-    ")\n"
+    ")\n",
+    "chart.display()\n"
    ]
   },
   {
@@ -807,6 +807,29 @@
     "from sklearn.metrics import plot_confusion_matrix\n",
     "\n",
     "plot_confusion_matrix(clf, X_test, y_test, cmap='Blues')"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "A confusion matrix is a table that is used to define the performance of a classification algorithm. It is mostly used in the field of machine learning and pattern recognition. It helps visualize the performance of an algorithm, allowing you to see true positives, true negatives, false positives, and false negatives in one place. The matrix allows you to calculate a variety of metrics, such as accuracy, precision, recall, and F1 score.\n",
+    "\n",
+    "A confusion matrix typically has four main values: true positives (TP), true negatives (TN), false positives (FP), and false negatives (FN). These values are arranged in a specific way in the matrix to make it easy to read and interpret.\n",
+    "\n",
+    "The top-left corner of the matrix represents true positives (TP), which are the number of times the model correctly predicted the positive class.\n",
+    "The top-right corner of the matrix represents false positives (FP), which are the number of times the model incorrectly predicted the positive class.\n",
+    "The bottom-left corner of the matrix represents false negatives (FN), which are the number of times the model incorrectly predicted the negative class.\n",
+    "The bottom-right corner of the matrix represents true negatives (TN), which are the number of times the model correctly predicted the negative class.\n",
+    "To read the data of a confusion matrix, you can use these values to calculate different metrics such as accuracy, precision, recall, F1 score and you can use them to evaluate the performance of your model.\n",
+    "\n",
+    "For example, accuracy = (TP + TN) / (TP + TN + FP + FN)\n",
+    "Precision = TP / (TP + FP)\n",
+    "Recall = TP / (TP + FN)\n",
+    "F1-score = 2 * (Precision * Recall) / (Precision + Recall)\n",
+    "\n",
+    "It's important to note that the interpretation of the matrix will depend on the problem you are trying to solve and the threshold you have chosen for the classifier."
    ]
   },
   {
